test/fail/base-and-core/core/Array.mo
import _Array "mo:base/Array";

module {

}
